; ModuleID = '/home/carl/AnghaBench/lab/python/extr_dmlab_module.c_Lab_write_property.c'
source_filename = "/home/carl/AnghaBench/lab/python/extr_dmlab_module.c_Lab_write_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (i32, i8*, i8*)* }

@.str = private unnamed_addr constant [4 x i8] c"key\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"value\00", align 1
@__const.Lab_write_property.kwlist = private unnamed_addr constant [3 x i8*] [i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i32 0, i32 0), i8* null], align 16
@.str.2 = private unnamed_addr constant [3 x i8] c"ss\00", align 1
@Py_RETURN_NONE = common dso_local global i32 0, align 4
@PyExc_TypeError = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [19 x i8] c"'%s' not writable.\00", align 1
@.str.4 = private unnamed_addr constant [40 x i8] c"Type error! Cannot assign '%s' to '%s'.\00", align 1
@PyExc_KeyError = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [16 x i8] c"'%s' not found.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*)* @Lab_write_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @Lab_write_property(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca [3 x i8*], align 16
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = bitcast i32* %12 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %8, align 8
  store i8* null, i8** %9, align 8
  store i8* null, i8** %10, align 8
  %14 = bitcast [3 x i8*]* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %14, i8* align 16 bitcast ([3 x i8*]* @__const.Lab_write_property.kwlist to i8*), i64 24, i1 false)
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = getelementptr inbounds [3 x i8*], [3 x i8*]* %11, i64 0, i64 0
  %18 = call i32 @PyArg_ParseTupleAndKeywords(i32* %15, i32* %16, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i8** %17, i8** %9, i8** %10)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %50

21:                                               ; preds = %3
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32 (i32, i8*, i8*)*, i32 (i32, i8*, i8*)** %25, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = load i8*, i8** %9, align 8
  %31 = load i8*, i8** %10, align 8
  %32 = call i32 %26(i32 %29, i8* %30, i8* %31)
  switch i32 %32, label %45 [
    i32 128, label %33
    i32 129, label %35
    i32 131, label %39
    i32 130, label %44
  ]

33:                                               ; preds = %21
  %34 = load i32, i32* @Py_RETURN_NONE, align 4
  br label %35

35:                                               ; preds = %21, %33
  %36 = load i32, i32* @PyExc_TypeError, align 4
  %37 = load i8*, i8** %9, align 8
  %38 = call i32 (i32, i8*, i8*, ...) @PyErr_Format(i32 %36, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0), i8* %37)
  br label %49

39:                                               ; preds = %21
  %40 = load i32, i32* @PyExc_TypeError, align 4
  %41 = load i8*, i8** %10, align 8
  %42 = load i8*, i8** %9, align 8
  %43 = call i32 (i32, i8*, i8*, ...) @PyErr_Format(i32 %40, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.4, i64 0, i64 0), i8* %41, i8* %42)
  br label %49

44:                                               ; preds = %21
  br label %45

45:                                               ; preds = %21, %44
  %46 = load i32, i32* @PyExc_KeyError, align 4
  %47 = load i8*, i8** %9, align 8
  %48 = call i32 (i32, i8*, i8*, ...) @PyErr_Format(i32 %46, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i8* %47)
  br label %49

49:                                               ; preds = %45, %39, %35
  store i32* null, i32** %4, align 8
  br label %50

50:                                               ; preds = %49, %20
  %51 = load i32*, i32** %4, align 8
  ret i32* %51
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @PyArg_ParseTupleAndKeywords(i32*, i32*, i8*, i8**, i8**, i8**) #2

declare dso_local i32 @PyErr_Format(i32, i8*, i8*, ...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
